estimate number of UMI per sequencing depth

--- a/1_UMI_ligation.ipynb
+++ b/1_UMI_ligation.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3daee807",
+   "metadata": {},
+   "source": [
+    "# Sequencing depth v.s. unique molecule captured"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "be36d06a",
+   "id": "24088155",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c2c03969",
+   "id": "bcc0f2f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "acbd704a",
+   "id": "5d132ed4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e0bbea24",
+   "id": "29f23f23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "876e5c2a",
+   "id": "a3a28067",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4bc045ee",
+   "id": "0fcb599e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "991be3d8",
+   "id": "47b54508",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bf9df6c9",
+   "id": "2b6367cb",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6ff0e79e",
+   "id": "c09cb271",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7d3086b7",
+   "id": "b27155a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "981df446",
+   "id": "0c917704",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "039e1602",
+   "id": "349e1868",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "71b002bc",
+   "id": "a5b00008",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1fb37221",
+   "id": "3e8102c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2805e665",
+   "id": "00c22b6d",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6182d299",
+   "id": "eacf1dcb",
    "metadata": {},
    "outputs": [
     {
@@ -690,8 +698,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "ae13fd4f",
+   "execution_count": 17,
+   "id": "42a298d0",
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d11cd367",
+   "id": "3acc7145",
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ff03ede5",
+   "id": "64f98bd7",
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "dba62669",
+   "id": "5b406d0b",
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ec95dfb",
+   "id": "8df5191c",
    "metadata": {},
    "outputs": [],
    "source": []
